# ImageToEditablePPT

./: .env.example  .gitignore  AGENTS.md  README.md  conversion-spec.md  plan.md  principle.md  pyproject.toml  v2.0 instruction.md
.github/workflows/: pytest.yml
docs/: legacy_inventory.md
src/image_to_editable_ppt/: __init__.py  benchmark_report.py  cli.py  components.py  config.py  detector.py  diagnostics.py  emit.py  eval_debug.py  exporter.py  fallback.py  filtering.py  fitter.py  gating.py  geometry.py  graph.py  guides.py  ir.py  objects.py  pipeline.py  preprocess.py  repair.py  router.py  schema.py  selection.py  source_attribution.py  style.py  svg_exporter.py  text.py  validation.py  vlm_parser.py
src/image_to_editable_ppt/eval_runtime/: __init__.py  v3_adapter.py
src/image_to_editable_ppt/legacy_v2/: README.md  __init__.py
src/image_to_editable_ppt/reconstructors/: __init__.py  connectors.py  (+4 more)
tests/: README.md  __init__.py  synthetic.py  test_benchmark_report.py  test_legacy_purge.py  test_pipeline.py  test_public_surface.py  test_stage_refactor.py  test_v3_architecture.py  test_v3_phase1.py  test_v3_phase2.py  test_v3_phase3.py  test_v3_phase4.py  test_v3_phase5.py  test_v3_phase6.py  test_v3_phase6b.py
tools/: alignment_loop.py  benchmark_report.py  run_v3_debug.py
workbench2.0/: README.md  benchmark_stage_summary.json
workbench2.0-geometry-only/: benchmark_stage_rollup.jsonl  benchmark_stage_summary.json
workbench2.0-no-motifs/: benchmark_stage_rollup.jsonl  benchmark_stage_summary.json
workbench2.0/input-alignment/: input.gt.json
(+337 files in other folders)
